# pytest-opentelemetry-exporter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
pytest_opentelemetry_exporter/: models.py  pytest_plugin.py  request_extractor.py  types.py
